<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="by.androidacademy.architecture.DetailsActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/img_header"
            android:scaleType="centerCrop">
    </ImageView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/txt_padding_left"
                android:src="@drawable/img_left"
                android:scaleType="fitCenter"
                android:layout_gravity="left"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextUltra"
                    android:text="@string/txt_title"
                    android:paddingLeft="@dimen/txt_padding_left"
                    android:paddingTop="@dimen/txt_padding_top"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_size_big"/>
            <LinearLayout
                    android:paddingTop="@dimen/txt_padding_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:paddingLeft="@dimen/txt_padding_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextDark"
                        android:text="@string/txt_release"
                        android:textStyle="bold"
                        android:textSize="@dimen/txt_size_medium"/>
                <TextView
                        android:paddingLeft="@dimen/txt_padding_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextDark"
                        android:text="@string/txt_date"
                        android:textStyle="normal"
                        android:textSize="@dimen/txt_size_medium"/>
            </LinearLayout>
            <Button
                    android:id="@+id/btn_to_movie"
                    android:layout_marginTop="@dimen/btn_padding"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_buttton"
                    android:textSize="@dimen/txt_size_medium"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        <TextView
                android:paddingLeft="@dimen/txt_padding_left"
                android:paddingTop="@dimen/txt_padding_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextDark"
                android:text="@string/txt_overview"
                android:textStyle="bold"
                android:textSize="@dimen/txt_size_medium"/>
        <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <TextView
                    android:paddingLeft="@dimen/txt_padding_left"
                    android:paddingTop="@dimen/txt_padding_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextGray"
                    android:text="@string/txt_description"
                    android:textStyle="normal"
                    android:textSize="@dimen/txt_size_small"/>
        </ScrollView>

    </LinearLayout>


</LinearLayout>