<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="by.androidacademy.architecture.DetailsActivity">

    <ImageView
            android:id="@+id/img_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_header"
            app:layout_constraintVertical_weight="10"
            app:layout_constraintBottom_toTopOf="@+id/img_center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="64:35"/>


    <ImageView
            android:id="@+id/img_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/txt_padding_left"
            android:paddingTop="@dimen/common_padding_top"
            android:scaleType="fitStart"
            android:src="@drawable/img_left"
            app:layout_constraintVertical_weight="8"
            app:layout_constraintBottom_toTopOf="@+id/txt_title"
            app:layout_constraintDimensionRatio="16:28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_top"
            app:layout_constraintVertical_chainStyle="packed" />

    <TextView
            android:id="@+id/txt_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/txt_padding_left"
            android:paddingTop="@dimen/common_padding_top"
            android:text="@string/txt_title"
            android:textColor="@color/colorTextUltra"
            android:textSize="@dimen/txt_size_big"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@+id/txt_small"
            app:layout_constraintStart_toEndOf="@+id/img_center"
            app:layout_constraintTop_toBottomOf="@+id/img_top" />

    <TextView
            android:id="@+id/txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/txt_padding_left"
            android:paddingTop="@dimen/common_padding_top"
            android:text="@string/txt_release"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/txt_size_medium"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@+id/btn_to_movie"
            app:layout_constraintStart_toEndOf="@+id/img_center"
            app:layout_constraintTop_toBottomOf="@+id/txt_top_title" />

    <TextView
            android:id="@+id/txt_small_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/txt_padding_left"
            android:text="@string/txt_date"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/txt_size_medium"
            android:textStyle="normal"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@+id/btn_to_movie"
            app:layout_constraintStart_toEndOf="@+id/txt_small"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_small"
            app:layout_constraintTop_toBottomOf="@+id/txt_top_title"
            android:paddingLeft="@dimen/txt_padding_left" />

    <Button
            android:id="@+id/btn_to_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/txt_padding_left"
            android:layout_marginTop="@dimen/btn_padding"
            android:paddingTop="@dimen/common_padding_top"
            android:text="@string/txt_buttton"
            android:textSize="@dimen/txt_size_medium"
            app:layout_constraintStart_toEndOf="@+id/img_center"
            app:layout_constraintTop_toBottomOf="@+id/txt_small" />

    <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/txt_padding_left"
            android:paddingRight="@dimen/txt_padding_left"
            android:paddingTop="@dimen/txt_padding_top"
            android:text="@string/txt_overview"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/txt_size_medium"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@+id/txt_bottom_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_center" />
    <ScrollView
            android:id="@+id/txt_bottom_container"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title">
    <TextView
            android:id="@+id/txt_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/txt_padding_left"
            android:paddingRight="@dimen/txt_padding_left"
            android:paddingTop="@dimen/txt_padding_top"
            android:text="@string/txt_description"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/txt_size_small"
            android:textStyle="normal"
            android:gravity="start"/>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>